# pr-warden

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  DEPLOY.md  Dockerfile  LICENSE  README.md  issue-01-design.md  issue-02-security-agent.md  issue-03-quality-agent.md  issue-04-test-agent.md  issue-05-summarizer.md  issue-06-graph-wiring.md  issue-07-cli-output.md  issue-08-tests.md  issue-09-docs.md  issue-concise-output.md  issue-diff-limits.md  issue-evidence-verification.md  issue-exit-codes-json.md  issue-incremental-ingest.md  issue-incremental-review.md  issue-linked-issue-commit-context.md  issue-quality-hallucination.md  issue-summarizer-suggestions-bug.md  issue-verdict-consistency-output.md  issue-warden-doctor.md  pyproject.toml  render.yaml
.github/workflows/: ci.yml  enforce-dev-only.yml  keep-alive.yml
agents/: README.md  graph.py  quality_agent.py  security_agent.py  state.py  summarizer.py  test_agent.py
api/: cors.py  main.py  models.py  rate_limiter.py
api/routes/: health.py  history.py  ingest.py  prs.py  review.py
cli/: main.py
config/: settings.py
core/: doctor_service.py  exceptions.py  ingest_history.py  ingest_service.py  pr_service.py  review_history.py  review_service.py  supabase_client.py  supabase_history.py
data/chroma/: chroma.sqlite3
frontend/: README.md  index.html
frontend/src/: App.tsx  index.css
gh/: client.py  pr_fetcher.py  repo_fetcher.py
ingestion/: embedder.py  github_loader.py  vector_store.py
retrieval/: context_builder.py  query_engine.py
supabase/: schema.sql
tests/: conftest.py
tests/integration/: conftest.py  test_full_flow.py
tests/unit/: test_agents_state.py  test_api.py  test_cli.py  test_client.py  (+22 more)
(+15 files in other folders)
