[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pr-warden"
version = "0.1.0"
description = "AI-powered PR review assistant"
requires-python = ">=3.11"
dependencies = [
    "langgraph",
    "llama-index-core",
    "llama-index-vector-stores-chroma",
    "chromadb",
    "PyGitHub",
    "typer[all]",
    "rich",
    "pydantic-settings",
    "google-generativeai",
]

[project.scripts]
warden = "cli.main:app"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
