$content = @'
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gh", "config", "core", "cli", "api", "ingestion", "retrieval", "agents"]

[project]
name = "pr-warden"
version = "0.1.0"
description = "AI-powered PR review assistant"
requires-python = ">=3.11"
dependencies = [
    "langgraph",
    "llama-index-core",
    "llama-index-vector-stores-chroma",
    "llama-index-embeddings-openai",
    "chromadb",
    "PyGitHub",
    "typer[all]",
    "rich",
    "pydantic-settings",
    "openai",
]

[project.scripts]
warden = "cli.main:app"

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
'@

[System.IO.File]::WriteAllText("$PWD\pyproject.toml", $content, (New-Object System.Text.UTF8Encoding $false))
git add pyproject.toml
git status